fix: fix where analytics data wont go down on small screens

--- a/assets/css/Styless.css
+++ b/assets/css/Styless.css
@@ -195,6 +195,8 @@ body {
     padding: 0;
     border-radius: 25px;
     max-height: fit-content;
+    justify-content: center;
+    align-items: center;
 }
 
 .button-container .row {
